# robotic_systems

./: .gitignore  README.md
src/basic_interfaces/: CMakeLists.txt  package.xml
src/basic_interfaces/action/: MyAction.action
src/basic_interfaces/srv/: MySrv.srv
src/basics/: package.xml  setup.py
src/basics/basics/: 02_publisher.py  03_subscriber.py  04_server.py  05_client.py  06_parameters.py  07_action_server.py  08_action_client.py  node_template.py
src/basics/launch/: node_launcher.launch.py
src/scara/: package.xml  setup.py
src/scara/launch/: scara_launcher.launch.py
src/scara/meshes/collision/: gp0.stl  gp1.stl  lk0.stl  lk1.stl  lk2.stl  lk3.stl
src/scara/meshes/visual/: gp0.dae  gp1.dae  lk0.dae  lk1.dae  lk2.dae  lk3.dae
src/scara/notes/: project_diagram.xopp
src/scara/scara/: scara_joint_publisher.py  virtual_pendant.py
src/scara/urdf/: scara.urdf.xml
src/scara_interfaces/: CMakeLists.txt  package.xml
src/scara_interfaces/srv/: IkSolver.srv
src/scara_pkg/: Tracer.py  package.xml  setup.cfg  setup.py
src/scara_pkg/URDF/: scara.urdf
src/scara_pkg/scara_pkg/: simple_ui.py  solver.py  tracer.py
