<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basics</name>
  <version>0.0.1</version>
  <description>Basic package for learning</description>
  <maintainer email="istarien@todo.todo">istarien</maintainer>
  <license>Apache 2.0</license>

  <!-- Packages -->
  <depend>std_msgs</depend>
  <depend>rclpy</depend>

  <!-- Launchers -->
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
